<resources>
    <string name="app_name">Guia4_KotlinLab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- <string name="menu_home">Home</string> -->
    <!--<string name="menu_gallery">Gallery</string> -->
    <string name="menu_slideshow">Slideshow</string>

    <!-- Nav menu strings -->
    <string name="menu_home">Home</string>
    <string name="menu_text_view">Text View</string>
    <string name="menu_button">Button</string>
    <string name="menu_edit_text">Edit Text</string>
    <string name="menu_check_box">Check Box</string>
    <string name="menu_radio_button">Radio Button</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_spinner">Spinner</string>
    <string name="menu_tab_widget">Tab Widget</string>

    <string name="fragment_label">%s Fragment</string>

    </resources>